@@ -1,0 +1,10 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Crypt-Tea_JS
+version:      2.21
+version_from: Tea_JS.pm
+installdirs:  site
+requires:
+
+distribution_type: module
+generated_by: /usr/bin/vim
